fixed broken css

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -920,7 +920,7 @@ fieldset {
 }
 
 .signupform fieldset input {
-    width: 70%
+    width: 70%;
 }
 
 .widget.profile form button {
